# polars

crates/polars-c/: Cargo.toml  hello.cpp  polars_c.h
crates/polars-c/src/: lib.rs
